--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ outputs:
     description: ""
 runs:
   using: "docker"
-  image: "ghcr.io/unfor19/release-action:${{ inputs.lang_name }}-${{ inputs.lang_version }}"
+  image: ghcr.io/unfor19/release-action:${{ inputs.lang_name }}-${{ inputs.lang_version }}
   args:
     - --lang_name=${{ inputs.lang_name }}
     - --lang_version=${{ inputs.lang_version }}
