--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,9 @@ outputs:
     description: ""
 runs:
   using: "docker"
-  image: ghcr.io/unfor19/release-action:${{ inputs.lang_name }}-${{ inputs.lang_version }}
+  image: format('ghcr.io/unfor19/release-action:{0}-{1}', ${{ inputs.lang_name }}, ${{ inputs.lang_version }})
   args:
-    - --lang_name=${{ inputs.lang_name }}
-    - --lang_version=${{ inputs.lang_version }}
+    - --lang_name
+    - ${{ inputs.lang_name }}
+    - --lang_version
+    - ${{ inputs.lang_version }}
