--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,9 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
+    - run: printenv
       shell: bash
-    - run: docker run --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} ls -lh
-      shell: bash
+    # - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
+    #   shell: bash
+    # - run: docker run --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} ls -lh
+    #   shell: bash
