--- a/action.yml
+++ b/action.yml
@@ -18,9 +18,9 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: printenv
-      shell: bash
+    # - run: printenv > .env
+    #   shell: bash
     # - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
     #   shell: bash
-    # - run: docker run --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} ls -lh
-    #   shell: bash
+    - run: docker run --entrypoint=printenv --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
+      shell: bash
