mount current dir

--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,5 @@ runs:
     #   shell: bash
     # - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
     #   shell: bash
-    - run: docker run --entrypoint=printenv --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
+    - run: docker run -v "$PWD"/:/code/ --workdir=/code/ --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} ls -lh
       shell: bash
