--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,7 @@ runs:
     #   shell: bash
     # - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
     #   shell: bash
-    - run: docker run -v "$PWD"/:/src/ --workdir=/code/ --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} /code/entrypoint.sh
+    - run: docker run --rm -v "$PWD"/:"${GITHUB_WORKSPACE}" --workdir="${GITHUB_WORKSPACE}" --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} /code/entrypoint.sh
+      shell: bash
+    - run: cat .status
       shell: bash
