--- a/action.yml
+++ b/action.yml
@@ -16,13 +16,10 @@ outputs:
   lang-version:
     description: ""
 runs:
-  using: "composite"
-  steps:
-    # - run: printenv > .env
-    #   shell: bash
-    # - run: docker pull ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
-    #   shell: bash
-    - run: docker run --rm -v "$PWD"/:"${GITHUB_WORKSPACE}" --workdir="${GITHUB_WORKSPACE}" --rm ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }} --lang_name="${{ inputs.lang-name }}" --lang_version="${{ inputs.lang-version }}"
-      shell: bash
-    - run: cat .status
-      shell: bash
+  using: "docker"
+  image: ghcr.io/unfor19/release-action:${{ inputs.lang-name }}-${{ inputs.lang-version }}
+  args:
+    - --lang_name
+    - "${{ inputs.lang-name }}"
+    - --lang_version
+    - "${{ inputs.lang-version }}"
