--- a/golang/1.16/action.yml
+++ b/golang/1.16/action.yml
@@ -16,6 +16,7 @@ inputs:
   src-dir:
     description: "source dir path"
     required: false
+    default: ""
 outputs:
   lang-name:
     description: ""
