add default value

--- a/golang/1.16/action.yml
+++ b/golang/1.16/action.yml
@@ -16,7 +16,7 @@ inputs:
   src-dir:
     description: "source dir path"
     required: false
-    default: ""
+    default: "."
 outputs:
   lang-name:
     description: ""
