--- a/golang/1.16/action.yml
+++ b/golang/1.16/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: "source dir path"
     required: false
     default: "."
+  project-name:
+    description: "Set this if the output file name is different from the GitHub repo name"
+    required: false
+    default: ""
 outputs:
   lang-name:
     description: ""
@@ -34,3 +38,5 @@ runs:
     - "${{ inputs.action }}"
     - --src_dir
     - "${{ inputs.src-dir }}"
+    - --project_name
+    - "${{ inputs.project-name }}"
