generating with templates

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -9,10 +9,10 @@ ARG JQ_VERSION="1.6"
 # base
 ARG BASH_VERSION="5.1"
 ARG BUILD_BASE_VERSION="0.5"
-ARG GIT_VERSION="2.32"
-ARG LIBSTC_CPP_VERSION="10.3.1"
-ARG OPENSSH_VERSION="8.6"
-ARG UTIL_LINUX_VERSION="2.37"
+ARG GIT_VERSION="2.30"
+ARG LIBSTD_CPP_VERSION="10.2"
+ARG OPENSSH_VERSION="8.4"
+ARG UTIL_LINUX_VERSION="2.36"
 ARG ZIP_VERSION="3.0"
 
 
@@ -44,7 +44,7 @@ RUN chmod +x ./* && \
 ARG BASH_VERSION
 ARG BUILD_BASE_VERSION
 ARG GIT_VERSION
-ARG LIBSTC_CPP_VERSION
+ARG LIBSTD_CPP_VERSION
 ARG OPENSSH_VERSION
 ARG UTIL_LINUX_VERSION
 ARG ZIP_VERSION
@@ -52,7 +52,7 @@ RUN apk --update add \
     bash=~"${BASH_VERSION}" \
     build-base=~"${BUILD_BASE_VERSION}" \
     ca-certificates \
-    libstdc++=~"${LIBSTC_CPP_VERSION}" \
+    libstdc++=~"${LIBSTD_CPP_VERSION}" \
     git=~"${GIT_VERSION}" \
     openssh=~"${OPENSSH_VERSION}" \
     tzdata \
