--- a/golang/1.17beta1/Dockerfile
+++ b/golang/1.17beta1/Dockerfile
@@ -1,4 +1,5 @@
 FROM ghcr.io/unfor19/release-action:golang-1.17beta1
+RUN go get -u github.com/jstemmer/go-junit-report
 WORKDIR /code/
 COPY ./src/ .
 ENTRYPOINT ["/code/entrypoint.sh"]
