using go test report html

--- a/golang/1.16/Dockerfile
+++ b/golang/1.16/Dockerfile
@@ -1,5 +1,6 @@
 FROM ghcr.io/unfor19/release-action:golang-1.16
 RUN go get -u github.com/jstemmer/go-junit-report
+RUN go get -u github.com/vakenbolt/go-test-report
 WORKDIR /code/
 COPY ./src/ .
 ENTRYPOINT ["/code/entrypoint.sh"]
