--- a/golang/1.17beta1/action.yml
+++ b/golang/1.17beta1/action.yml
@@ -9,12 +9,12 @@ inputs:
     required: true
   src-dir:
     description: "If the main.go file is in a sub-directory"
-    required: false
     default: "."
+    required: false
   project-name:
     description: "If the output file name is different from the GitHub repo name"
-    required: false
     default: ""
+    required: false
   build-script-path:
     description: "Path of the script to execute in the build action"
     default: "false"
@@ -23,10 +23,14 @@ inputs:
     description: Test results output file path
     default: ""
     required: false
+  test-err-on-fail:
+    description: Will exit with error if test step fails
+    default: "true"
+    required: false
   gh-token:
     description: "GitHub Personal Access token for uploading release assets, defaults to GITHUB_TOKEN"
-    required: false
     default: "false"
+    required: false
 
 runs:
   using: "docker"
@@ -44,3 +48,5 @@ runs:
     - "${{ inputs.build-script-path }}"
     - --test_results_path
     - "${{ inputs.test-results-path }}"
+    - --test_err_on_fail
+    - "${{ inputs.test-err-on-fail }}"
