--- a/golang/1.16/Dockerfile
+++ b/golang/1.16/Dockerfile
@@ -1,4 +1,6 @@
 FROM ghcr.io/unfor19/release-action:golang-1.16
+ENV LANG_NAME="golang"
+ENV LANG_VERSION="1.16"
 WORKDIR /code/
 COPY ./src/ .
 ENTRYPOINT ["/code/entrypoint.sh"]
