--- a/golang/1.16/action.yml
+++ b/golang/1.16/action.yml
@@ -1,8 +1,8 @@
-name: "release-action"
+name: "releaser-action"
 branding:
   icon: "align-justify"
   color: "white"
-description: "Build and Release application in GitHub's ecosystem"
+description: "Build and Release in GitHub's ecosystem"
 inputs:
   action:
     description: "dependencies, build, test, release"
